--- a/nginx.conf
+++ b/nginx.conf
@@ -65,5 +65,12 @@ http {
             rewrite ^/api(.*) $1 break;
             proxy_pass http://app:3000;
         }
+
+        location /socket.io {
+            proxy_pass http://app:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
     }
 }
