Set a Content Security Policy

--- a/nginx.conf
+++ b/nginx.conf
@@ -50,6 +50,8 @@ http {
             root /usr/share/nginx/html;
             index index.html;
             try_files $uri $uri/ /index.html =404;
+
+            add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: https://www.gravatar.com; frame-ancestors 'none'; sandbox allow-forms allow-modals allow-popups allow-same-origin allow-top-navigation allow-scripts";
         }
 
         location /static {
